<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatisticsActivity"
    android:orientation="vertical"
    android:background="@color/backgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            style="@style/HeadersTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:text="@string/date"
            />
        <TextView
            style="@style/HeadersTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stepsNumber"
            />
        <TextView
            style="@style/HeadersTheme"
            android:id="@+id/field3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/calories_burned"
            />
        <TextView
            style="@style/HeadersTheme"
            android:id="@+id/field4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/meters_covered"
            />
        <TextView
            style="@style/HeadersTheme"
            android:id="@+id/field5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time_passed"
            />
    </LinearLayout>

    <ListView
        android:id="@+id/lv_total_stats"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

</LinearLayout>